syntax = "proto3";

package rivet.backend.pkg.user_presence.leave;

import "proto/common.proto";

message Request {
	rivet.common.Uuid user_id = 1;
}

message Response {

}
